--- a/style.css
+++ b/style.css
@@ -68,6 +68,7 @@ p {
 #site-header .site-title  a {
 	/* Actual header title */
 	font-size: 32px;
+	text-decoration: none;
 }
 
 /* NAVIGATION EOF */
@@ -107,6 +108,7 @@ p {
 	/* Content page titles */
 	font-family: hussar;
 	font-size: 30px;
+	text-decoration: none;
 }
 
 #site-content .entry-header .entry-header-inner h2 {
@@ -118,6 +120,7 @@ p {
 #site-content nav a {
 	font-family: hussar;
 	color: black;
+	text-decoration: none;
 }
 
 /* Breadtext, writing etc. */
@@ -132,14 +135,12 @@ p {
 #site-content article {
 	display: inline-flex;
 	flex-direction: row;
-	margin-left: 15%;
-	margin-right: 0%;
+	width: 80%;
+	margin: auto;
 }
 #site-content article:nth-child(3) {
 	/* Reverse direction for each third child (due to separator) */
 	flex-direction: row-reverse;
-	margin-left: 0%;
-	margin-right: 15%;
 }
 /* Single */
 body.single #site-content article {
@@ -150,3 +151,17 @@ body.single #site-content article {
 }
 
 /* CONTENT PAGES EOF */
+
+/* BUTTONS, GENERIC COMPONENTS BOF */
+
+a.button {
+	/* Link buttons */
+	background-color: #ff6600;
+	color: white;
+	border: none;
+	text-align: center;
+	text-decoration: none;
+	font-family: applestorm;
+}
+
+/* BUTTONS, GENERIC COMPONENTS EOF */
