Add forgotten code

--- a/style.css
+++ b/style.css
@@ -150,7 +150,7 @@ body.single #site-content article {
 	margin: 0;
 }
 
-/* CONTENT PAGES EOF */
+/* CONTENT PAGES EOF */d
 
 /* BUTTONS, GENERIC COMPONENTS BOF */
 
