Removed excesses, disabled sections in theme config

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
- Theme Name:   Twenty Twenty Child
+ Theme Name:   Parkour-Festivaali (Twenty Twenty)
  Theme URI:    http://example.com/
  Description:  Twenty Twenty Child Theme (Parkour-festivaali)
  Author:       Jimi Heinonen
