--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@
 
 /* FONTS EOF */
 
+
 /* TEXT BASE BOF */
 
 p {
@@ -51,9 +52,8 @@ p {
 	max-width: 100%;
 	margin-right: 0;
 	margin-left: 0;
-}
-#site-header .header-inner .header-titles-wrapper {
-	margin-left: 5%;
+	padding-left: 11%;
+	padding-right: 12%;
 }
 #site-header p {
 	font-family: rocketfuel;
@@ -65,6 +65,7 @@ p {
 	font-family: rocketfuel;
 	color: white;
 	font-size: 24px;
+	text-decoration: none;
 }
 #site-header h2 {
 	font-family: rocketfuel;
@@ -82,11 +83,12 @@ p {
 .footer-nav-widgets-wrapper.header-footer-group {
 	background-color: #333;
 	height: 170px;
-	overflow: hidden;  /* This might cause unexpected issues so be careful */
+	margin-top: 0;
 }
 .footer-nav-widgets-wrapper.header-footer-group .footer-inner.section-inner {
 	height: 170px;
 	flex-align: center;
+	max-width: 80%;
 }
 .footer-nav-widgets-wrapper.header-footer-group .footer-inner.section-inner .footer-widgets-outer-wrapper {
 	height: 170px;
@@ -103,6 +105,7 @@ p {
 	font-size: 14px;
 }
 /* FOOTER EOF */
+
 
 /* CONTENT PAGES BOF */
 #site-content {
@@ -122,26 +125,40 @@ p {
 	font-size: 30px;
 	text-decoration: none;
 }
-
+#site-content .entry-header {
+	background-color: initial;
+}
 #site-content .entry-header .entry-header-inner h2 {
 	/* Content page titles in feed */
 	font-family: hussar;
 	font-size: 30px;
 }
-
 #site-content nav a {
 	font-family: hussar;
 	color: black;
 	text-decoration: none;
 }
-
 /* Breadtext, writing etc. */
-#site-content .entry-content p, cite, a {
+#site-content .entry-content p, cite, a, li {
 	font-family: hussar;
 	font-size: 18px;
 	color: black;
 }
-
+/* Buttons, links, generic components */
+a {
+	text-decoration: none;
+}
+a.button {
+	/* Link buttons */
+	background-color: #ff6600;
+	color: white;
+	border: none;
+	text-align: center;
+	font-family: applestorm;
+}
+.wp-block-button {
+	font-family: hussar;
+}
 /* Article wrapping */
 /* List */
 #site-content article {
@@ -154,32 +171,30 @@ p {
 	/* Reverse direction for each third child (due to separator) */
 	flex-direction: row-reverse;
 }
-/* Single */
+/* Single post or article */
 body.single #site-content article {
 	display: initial;
-}
-body.single #site-content article {
-	margin: 0;
 }
 body.single #site-content article .featured-media {
 	margin-top: 6rem;
 }
-
+body.page #site-content article {
+	display: initial;
+}
+body.page #site-content article .featured-media {
+	margin-top: 6rem;
+}
+/* Timetable page background */
+body.page.page-id-82 main {
+	/* TODO: This is bound to be wrong */
+	background-image: url('assets/images/ohjelma_background.JPG');
+	background-size: cover;
+}
+/* Timetable page header */
+body.page.page-id-82 .entry-header h1.entry-title {
+	font-family: applestorm;
+	font-size: 48;
+	color: #ff6600;
+}
 /* CONTENT PAGES EOF */d
 
-/* BUTTONS, GENERIC COMPONENTS BOF */
-
-a.button {
-	/* Link buttons */
-	background-color: #ff6600;
-	color: white;
-	border: none;
-	text-align: center;
-	text-decoration: none;
-	font-family: applestorm;
-}
-.wp-block-button {
-	font-family: hussar;
-}
-
-/* BUTTONS, GENERIC COMPONENTS EOF */
