--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ p {
 	/* Nav menu links */
 	font-family: rocketfuel;
 	color: white;
-	font-size: 0.8em;
+	font-size: 1.5em;
 	text-decoration: none;
 }
 #site-header h2 {
@@ -73,8 +73,11 @@ p {
 }
 #site-header .site-title  a {
 	/* Actual header title */
-	font-size: 0.9em;
+	font-size: 1.5em;
 	text-decoration: none;
+}
+#site-header .primary-menu > li {
+	margin: 1.2rem 0 0 5.5rem;
 }
 /* Hero Carousel tuning */
 #site-header .sp-widget-post-slider-section .widget-post-slider img {
