--- a/style.css
+++ b/style.css
@@ -188,7 +188,7 @@ hr.post-separator {
 	margin-top: 50px;
 	margin-bottom: 20px;
 	background-color: #333a !important;
-	width: 60%;
+	width: 80%;
 }
 ul li a {
 	list-style: none;
@@ -247,7 +247,7 @@ hr.post-separator:after {
 
 
 /* DESKTOP RULES BOF */
-@media only screen and (min-width: 360px) {
+@media only screen and (min-width: 1080px) {
 
 	/* Article wrapping */
 	/* Frontpage List */
@@ -255,9 +255,13 @@ hr.post-separator:after {
 		display: inline-flex;
 		flex-direction: row;
 		justify-content: space-evenly;
-		align-items: end;
-		width: 60%;
+		align-items: center;
+		width: 80%;
 		margin: auto;
+	}
+	body.home.blog #site-content article:nth-child(4n-1) {
+		/* Reverse article list direction */
+		flex-direction: row-reverse;
 	}
 	body.home.blog #site-content article:nth-child(4n-1) {
 		/* Reverse article list direction */
@@ -267,7 +271,7 @@ hr.post-separator:after {
 		margin-bottom: 100px;
 	}
 	body.home.blog #site-content article .featured-media img {
-		max-width: 70%;
+		max-width: 100%;
 		margin: 0;
 	}
 	body.home.blog #site-content article .post-inner {
@@ -331,7 +335,7 @@ hr.post-separator:after {
 		background-color: #ccc8;
 		margin: 5rem;
 		border-radius: 8px;
-		width: 60%;
+		width: 80%;
 		margin: 100px auto;
 	}
 	/* Timetable text content */
@@ -342,7 +346,7 @@ hr.post-separator:after {
 }
 
 /* MOBILE RULES BOF */
-@media only screen and (max-width: 360px) {
+@media only screen and (max-width: 1080px) {
 	/* MOBILE GENERIC COMPONENTS BOF */
 	#site-content .entry-content .collapseomatic {
 		color: white;
@@ -441,3 +445,15 @@ hr.post-separator:after {
 	/* MOBILE SIDEBAR MENU EOF */
 }
 /* MOBILE RULES EOF */
+
+
+/* TABLET RULES BOF */
+@media only screen and (max-width: 1080px) {
+	body.home.blog #site-content article {
+		flex-direction: column;
+	}
+	#site-content .entry-content p {
+		text-align: center;
+	}
+}
+/* TABLET RULES EOF */
